--- a/Small_Talk_Frontend/src/app/user-translate/user-translate.component.html
+++ b/Small_Talk_Frontend/src/app/user-translate/user-translate.component.html
@@ -17,3 +17,26 @@
   <button type="submit">Translate</button>
 </form>
 
+
+
+<!-- <div class="table-container">
+  <table>
+    <thead>
+      <tr>
+        <th>{{dictionaries.dictionaryName}}</th>
+      </tr>
+      <tr>
+        <th>ENTRY</th>
+        <th>TRANSLATION</th>
+      </tr>
+    </thead>
+    <tbody>
+      <ng-container *ngFor="let entry of userEntriesList">
+        <tr>
+          <td>{{entry.userEntry}}</td>
+          <td>{{entry.translation}}</td>
+        </tr>
+      </ng-container>
+    </tbody>
+  </table>
+</div> -->
