--- a/Small_Talk_Frontend/src/app/user-translate/user-translate.component.html
+++ b/Small_Talk_Frontend/src/app/user-translate/user-translate.component.html
@@ -7,13 +7,13 @@
     </option>
   </select>
   
-  <label for="textInput">Enter text to translate:</label>
-  <input type="text" formControlName="textInput" id="textInput">
+  <label for="textToTranslate">Enter text to translate:</label>
+  <input type="text" formControlName="textToTranslate" id="textToTranslate">
 
   <div *ngIf="translatedText">
-    Translated Text: {{ translatedText }}
+    Translation: {{ translatedText }}
   </div>
+  
   
   <button type="submit">Translate</button>
 </form>
-
