Modified dictionary & new-dictionary components to accept proper variables/arguments. Created pipes to alphabetize dictionaries and entries. Modified HTML &  CSS.

--- a/Small_Talk_Frontend/src/app/dictionary/dictionary.component.html
+++ b/Small_Talk_Frontend/src/app/dictionary/dictionary.component.html
@@ -7,11 +7,11 @@
       <table>
         <thead>
           <tr>
-            <th>{{ user.userName }}'s Dictionaries</th>
+            <th>{{ this.currentUserName }}'s Dictionaries</th>
           </tr>
         </thead>
         <tbody>
-          <ng-container *ngFor="let dictionary of userDictionaryList">
+          <ng-container *ngFor="let dictionary of userDictionaryList | sortDictionaries">
             <tr>
               <td (click)="dictionarySelection(dictionary)">
                 {{ dictionary.dictionaryName }}
