--- a/Small_Talk_Frontend/src/app/new-dictionary/new-dictionary.component.html
+++ b/Small_Talk_Frontend/src/app/new-dictionary/new-dictionary.component.html
@@ -1,11 +1,10 @@
 
 <div class="center">
-  <div class="form-container">
+  <div class="dictionary-form">
       <form [formGroup]="dictionaryForm" (ngSubmit)="onSubmit()">
           <button type="submit" [disabled]="dictionaryForm.invalid">Create New Dictionary</button>
           <div class="form-group">
-              <label for="dictionaryName">Dictionary Name:</label>
-              <input type="text" id="dictionaryName" formControlName="dictionaryName" required>
+              <input type="text" id="dictionaryName" formControlName="dictionaryName" required placeholder="Dictionary Name">
           </div>
           <div class="form-group">
               <label for="language">Language:</label>
