--- a/Small_Talk_Frontend/src/app/user-translate/user-translate.component.html
+++ b/Small_Talk_Frontend/src/app/user-translate/user-translate.component.html
@@ -1,39 +1,39 @@
 
-<div class="background-container">
-  <h1>HELLO{{ this.currentUserDictionary?.dictionaryName }}</h1>
+<<div class="background-container">
+  <div class="dictionary-header">
+    <h1>{{ currentUserDictionary?.dictionaryName }}</h1>
+  </div>
 
-  <div class="table-container">
-    <table>
-      <thead>
-        <tr>
-          <th>Entries</th>
-          <th>Definitions</th>
-        </tr>
-      </thead>
-      <tbody>
-        <ng-container *ngFor="let entry of currentUserEntries">
+  <div class="dictionary-content">
+    <div class="table-container">
+      <table>
+        <thead>
           <tr>
-            <td>{{ entry.userEntry }}</td>
-            <td>{{ entry.translation }}</td>
+            <th>Entries</th>
+            <th>Definitions</th>
           </tr>
-        </ng-container>
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          <ng-container *ngFor="let entry of currentUserEntries | sortEntries">
+            <tr>
+              <td>{{ entry.userEntry }}</td>
+              <td>{{ entry.translation }}</td>
+            </tr>
+          </ng-container>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="center">
+      <form [formGroup]="translateForm" (ngSubmit)="onSubmit()" class="translate-form">
+        <input type="text" formControlName="textToTranslate" id="textToTranslate" placeholder="Enter text to translate">
+
+        <div *ngIf="translatedText">
+          Translation: {{ translatedText }}
+        </div>
+
+        <button type="submit">Translate</button>
+      </form>
+    </div>
   </div>
-  
-  <div class ="center">
-    <form [formGroup]="translateForm" (ngSubmit)="onSubmit()">
-      <label for="textToTranslate">Enter text to translate:</label>
-      <input type="text" formControlName="textToTranslate" id="textToTranslate">
-    
-      <div *ngIf="translatedText">
-        Translation: {{ translatedText }}
-      </div>
-      
-      
-      <button type="submit">Translate</button>
-    </form>
-    
-  </div>
-  
 </div>
