--- a/Small_Talk_Frontend/src/app/login/login.component.css
+++ b/Small_Talk_Frontend/src/app/login/login.component.css
@@ -25,7 +25,7 @@
   
   .login-label {
     display: block;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
   }
   
   .login-button {
@@ -40,3 +40,14 @@
     border-radius: 5px;
     background-color: #6ccfe8;
   }
+
+  .new-user {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* height: 100vh; */
+    text-align: center;
+    margin-left: 3em;
+  }
+  
