--- a/Small_Talk_Frontend/src/app/user-translate/user-translate.component.html
+++ b/Small_Talk_Frontend/src/app/user-translate/user-translate.component.html
@@ -1,5 +1,5 @@
 
-<<div class="background-container">
+<div class="background-container">
   <div class="dictionary-header">
     <h1>{{ currentUserDictionary?.dictionaryName }}</h1>
   </div>
@@ -34,6 +34,19 @@
 
         <button type="submit">Translate</button>
       </form>
+    </div>
+    <div class="center">
+      <div class="entry-form">
+          <form [formGroup]="entryForm" (ngSubmit)="newEntry()">
+              <button type="submit" [disabled]="entryForm.invalid">Add Entry </button>
+              <div class="form-group">
+                  <input type="text" id="userEntry" formControlName="userEntry" required placeholder="Add Entry">
+              </div>
+              <div class="form-group">
+                  <input type="text" id="translation" formControlName="translation" required placeholder="Add Translation">
+              </div>
+          </form>
+        </div>
     </div>
   </div>
 </div>
