--- a/Small_Talk_Frontend/src/app/user-translate/user-translate.component.css
+++ b/Small_Talk_Frontend/src/app/user-translate/user-translate.component.css
@@ -100,3 +100,34 @@ th, td {
 .translate-form input[type="text"]::placeholder {
   color: lightgray;
 }
+
+.entry-form {
+  max-width: 300px;
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #6378a8;
+  border-radius: 5px;
+  background-color: #6ccfe8;
+}
+
+.entry-form input[type="text"] {
+  height: 150px;
+  padding: 10px;
+  font-size: 18px;
+  text-align: center;
+  font-family: Arial, sans-serif;
+}
+
+.entry-form input[type="text"]::placeholder {
+  color: lightgray;
+}
+
+.center2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: top;
+  margin-top: 1em;
+  align-items: center;
+  height: 35vh;
+  text-align: center;
+}
