--- a/Small_Talk_Frontend/src/styles.css
+++ b/Small_Talk_Frontend/src/styles.css
@@ -5,7 +5,7 @@ html {
 .center {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: top;
     align-items: center;
     height: 100vh;
     text-align: center;
