--- a/Small_Talk_Frontend/src/app/login/login.component.html
+++ b/Small_Talk_Frontend/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 
 <div class="background-container">
   <div class="center">
-    <div class="smalltalk-container">
+    <div class="center2">
       <p class="smalltalk">SmalltalK</p>
     </div>
   
