--- a/Small_Talk_Frontend/src/app/login/login.component.css
+++ b/Small_Talk_Frontend/src/app/login/login.component.css
@@ -1,32 +1,18 @@
 
-  .smalltalk-container {
-    margin-bottom: 0px;
-  }
   
    .smalltalk {
     font-size: 150px;
-    /* color: rgb(46, 46, 132); */
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
     font-weight: 900;
-    margin-left: 0.5em;
     -webkit-text-stroke-width: 7px;
-    -webkit-text-stroke-color: darkblue;
-    -webkit-text-fill-color: #2851f6;
+    -webkit-text-stroke-color: #0b31c9;
+    -webkit-text-fill-color: transparent;
   }
-   
-  .form-container {
-    margin-top: 20px;
-  }
-  
+     
   .login-label {
     display: block;
-    /* margin-bottom: 10px; */
   }
-  
-  .login-button {
-    margin-top: 10px;
-  }
-  
+     
   .login-form {
     max-width: 400px;
     width: 100%;
@@ -36,13 +22,14 @@
     background-color: #6ccfe8;
   }
 
-  .new-user {
-    display:flex;
+  .form-container{
+    display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    /* height: 100vh; */
+    margin-top: 1em;
+    align-items: center;
+    height: 35vh;
     text-align: center;
-    margin-left: 3em;
   }
+
   
