--- a/Small_Talk_Frontend/src/styles.css
+++ b/Small_Talk_Frontend/src/styles.css
@@ -11,6 +11,16 @@ html {
     text-align: center;
   }
 
+  .center2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: top;
+    margin-top: 1em;
+    align-items: center;
+    height: 35vh;
+    text-align: center;
+  }
+
   .background-container {
     background-image: url('images/AroundTheWorld.jpg');
     background-size: cover;
