--- a/Small_Talk_Frontend/src/app/user-translate/user-translate.component.css
+++ b/Small_Talk_Frontend/src/app/user-translate/user-translate.component.css
@@ -72,13 +72,18 @@ th, td {
   background-color: #6ecceb;
 }
 
+.entry-translate-container {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
+}
+
 .translate-form {
   display:flex;
   flex-direction: column;
   max-width: 400px;
   width: 100%;
-  margin: 0 auto;
-  margin-top: 0px;
+  margin-left: 100px; 
   padding: 20px;
   border: 1px solid #6378a8;
   border-radius: 5px;
@@ -104,6 +109,7 @@ th, td {
 .entry-form {
   max-width: 300px;
   width: 100%;
+  margin-right: 100px;
   padding: 20px;
   border: 1px solid #6378a8;
   border-radius: 5px;
