--- a/Small_Talk_Frontend/src/app/user-translate/user-translate.component.html
+++ b/Small_Talk_Frontend/src/app/user-translate/user-translate.component.html
@@ -33,18 +33,8 @@
     </div>
 
     <div class="center2">
-      <form [formGroup]="translateForm" (ngSubmit)="onSubmit()" class="translate-form">
-        <input type="text" formControlName="textToTranslate" id="textToTranslate" placeholder="Enter text to translate">
-
-        <div *ngIf="translatedText">
-          Translation: {{ translatedText }}
-        </div>
-
-        <button type="submit" [disabled]="translateForm.invalid">Translate</button>
-      </form>
-    </div>
-    <div class="center">
-      <div class="entry-form">
+      <div class="entry-translate-container">
+        <div class="entry-form">
           <form [formGroup]="entryForm" (ngSubmit)="newEntry()">
               <button type="submit" [disabled]="entryForm.invalid">Add Entry </button>
               <div class="form-group">
@@ -55,6 +45,19 @@
               </div>
           </form>
         </div>
+        <form [formGroup]="translateForm" (ngSubmit)="onSubmit()" class="translate-form">
+          <input type="text" formControlName="textToTranslate" id="textToTranslate" placeholder="Enter text to translate">
+  
+          <div *ngIf="translatedText">
+            <input type="text" id="translatedText" [value]="translatedText" readonly placeholder="Translation">
+          </div>
+          <!-- <div *ngIf="userTransliteratedText">
+            <input type="text" id="userTransliteratedText" [value]="userTransliteratedText" readonly placeholder="Translation">
+          </div> -->
+  
+          <button type="submit" [disabled]="translateForm.invalid">Translate</button>
+        </form>
+      </div>
     </div>
   </div>
 </div>
